# deidentify-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: main.py  pipeline.py
app/operators/: strategies.py
app/recognizers/: custom.py
app/ui/: export.py  manual_review.py  preview.py  sidebar.py
app/utils/: audit.py  column_detector.py  io.py
data/sample/: review_test_dataset.csv  sample_dataset.csv
docs/: QUICKSTART.md  irb_methodology.md  user_guide.md
tests/: test_audit.py  test_pipeline.py  test_recognizers.py
