[project]
name = "deidentify-app"
version = "1.0.0"
description = "Local-only PII de-identification tool for human subjects research data"
readme = "docs/QUICKSTART.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Research Lab" }
]
keywords = ["de-identification", "pii", "hipaa", "presidio", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Security",
]

dependencies = [
    "presidio-analyzer==2.2.355",
    "presidio-anonymizer==2.2.355",
    "spacy==3.7.6",
    "streamlit==1.40.2",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "faker==30.8.2",
    "pydantic==2.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
deidentify = "app.main:main"

[project.urls]
Documentation = "docs/QUICKSTART.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.4",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
